fix: shapes spread out evenly and align with hitboxes

--- a/public/style.css
+++ b/public/style.css
@@ -114,8 +114,6 @@ video {
 
 .canvas {
   position: absolute;
-  top: 0;
-  left: 0;
   z-index: 10;
 }
 .camera-loader {
@@ -123,7 +121,7 @@ video {
   height: 480px;
 }
 
-.camera-container {
+/* .camera-container {
   display: flex;
   justify-content: center;
-}
+} */
